<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:paddingTop="36dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_information_fill_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="87dp">

        <TextView
            android:id="@+id/text_view_information_fill_fields_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/fill_profile_information"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_calories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="87dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_view_calories_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/count_of_calories_label"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_calories_label" />


        <TextView
            android:id="@+id/text_view_calories_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/goal_label"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/toggle_button_goal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true"
            app:layout_constraintBottom_toTopOf="@+id/button_count_calories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonLossWeight"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                android:text="@string/reduction_label" />

            <Button
                android:id="@+id/buttonHoldWeight"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/hold_label"

                />

            <Button
                android:id="@+id/buttonGainWeight"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/gain_label" />
        </com.google.android.material.button.MaterialButtonToggleGroup>



        <Button
            android:id="@+id/button_count_calories"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>